Grid and type spacing aligned, cell ordering issue fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -77,7 +77,7 @@
 
 .image {
 
-    margin: 4px 0 20px 0;
+    margin: 4px 0 28px 0;
 
     @include image(large);
     
