--- a/jam/_base.scss
+++ b/jam/_base.scss
@@ -19,17 +19,17 @@ $row-collapse-size:  2;
 $all-media: large, standard, tablet, plus, phone, phone-tablet, phone-plus;
 $single-media: large, standard, tablet, plus, phone;
 
-$ygap-ph:   28px;
-$ygap-pl:   32px;
-$ygap-tb:   36px;
-$ygap-st:   40px;
-$ygap-lg:   44px;
+$ygap-ph:   24px;
+$ygap-pl:   28px;
+$ygap-tb:   32px;
+$ygap-st:   36px;
+$ygap-lg:   40px;
 
 $xgap-ph:   16px;
 $xgap-pl:   20px;
-$xgap-tb:   32px;
-$xgap-st:   44px;
-$xgap-lg:   48px;
+$xgap-tb:   28px;
+$xgap-st:   40px;
+$xgap-lg:   44px;
 
 $plus:      411px;  // Pixel 2 portrait
 $tablet:    768px;  // iPad 10" portrait
